--- a/thesis.html
+++ b/thesis.html
@@ -80,6 +80,13 @@
 					<th>Investigation of the Formation Process of Recombining Plasmas in the Galactic Supernova Remnants with the Suzaku X-ray Observatory</th>
 					<th><a href="d_ron/matsumuraD.pdf">PDF</a></th>	
 				</tr>
+		
+				<tr>
+					<th>2017</th>
+					<th>古村 翔太郎</th>
+					<th>Imaging Polarimeter for a Sub-MeV Gamma-Ray All-sky Survey Using an Electron-tracking Compton Camera</th>
+					<th><a href="d_ron/komuraD.pdf">PDF</a></th>	
+				</tr>
 
 				<tr>
 					<th>2016</th>
