modify the title of matsumuraDron(X-ray -> X-Ray)

--- a/thesis.html
+++ b/thesis.html
@@ -77,7 +77,7 @@
 				<tr>
 					<th>2017</th>
 					<th>松村 英晃</th>
-					<th>Investigation of the Formation Process of Recombining Plasmas in the Galactic Supernova Remnants with the Suzaku X-ray Observatory</th>
+					<th>Investigation of the Formation Process of Recombining Plasmas in the Galactic Supernova Remnants with the Suzaku X-Ray Observatory</th>
 					<th><a href="d_ron/matsumuraD.pdf">PDF</a></th>	
 				</tr>
 		
