modify main page

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			<div> 
 				<div id="newTopics">
 
-					<strong><FONT size="4">Topics</FONT></strong>
+					<strong><FONT size="4">新着情報</FONT></strong>
 
 					<dl>
 
@@ -268,7 +268,7 @@
 			<div> 
 			  <div id="newPublications">
 			    
-			    <strong><FONT size="4">Publications</FONT></strong>
+			    <strong><FONT size="4">最近の論文</FONT></strong>
 			    
 			    <dl>
 
