MAGIC -> the MAGIC

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 			      <dd>Y. Mizumura, T. Tanimori, A. Takada, <a href="http://journals.jps.jp/doi/pdf/10.7566/JPSCP.14.020607">Possibility of Systematic Study of Supernova Explosions by Nuclear Imaging Spectroscopy</a>, JPS Conf. Proc. (2017)
 			      </dd>
 			   			      
-			      <dd>Ahnen, M. L. (for MAGIC Collaboration), et al., <a href="http://dx.doi.org/10.1093/mnras/stx472">MAGIC detection of very high energy 粒-ray emission from the low-luminosity blazar 1ES 1741+196 </a>, MNRAS (2017)
+			      <dd>Ahnen, M. L. (for the MAGIC Collaboration), et al., <a href="http://dx.doi.org/10.1093/mnras/stx472">MAGIC detection of very high energy 粒-ray emission from the low-luminosity blazar 1ES 1741+196 </a>, MNRAS (2017)
 			      </dd>
 
 			      <dd>T. Tanimori, Y. Mizumura, A. Takada, et al., <a href="http://dx.doi.org/10.1038/srep41511">Establishment of Imaging Spectroscopy of Nuclear Gamma-Rays based on Geometrical Optics</a>, Scientific Reports (2017)
