add new publications

--- a/X/members.html
+++ b/X/members.html
@@ -80,7 +80,7 @@
       </div>
     </div>
     <h3>内田 裕之（Uchida Hiroyuki）</h3>
-    <div class="details_frame"> <img src="image/uchida.jpg" alt="真鍋俊也" class="fl">
+    <div class="details_frame"> <img src="image/uchida.png" alt="真鍋俊也" class="fl">
       <div class="staffdetails">
           <h4>役職</h4>
           <p>助教</p>
