--- a/X/index.html
+++ b/X/index.html
@@ -75,6 +75,8 @@
       <h2 class="top">最近の論文</h2>
       <div id="publications">
         <ul>
+	  <li>Hitomi Collaboration (Corresponding authors: H. Uchida, T. Tanaka et al.) <em><a href="https://arxiv.org/pdf/1802.05068v1.pdf"> Hitomi X-ray Observation of the Pulsar Wind Nebula G21.5−0.9</a></em>, arXiv (2018)</li>
+	  <li>H. Okon, H. Uchida, T. Tanaka, H. Matsumura, T. G. Tsuru <em><a href="https://arxiv.org/pdf/1802.02814.pdf">The Origin of Recombining Plasma and the Detection of the Fe-K Line in the Supernova Remnant W28</a></em>, arXiv (2018)</li>
 	  <li>T. Tanaka, H. Uchida, H. Nakajima, H. Tsunemi, K. Hayashida, T. G. Tsuru, T. Dotani, R. Nagino, S. Inoue, S. Katada, R. Washino, M. Ozaki, H. Tomida, C. Natsukari, S. Ueda, M. Iwai, K. Mori, M. Yamauchi, I. Hatsukade, Y. Nishioka, E. Isoda, M. Nobukawa, J. S. Hiraga, T. Kohmura, H. Murakami, K. Nobukawa, A. Bamba, J. P. Doty <em><a href="http://adsabs.harvard.edu/abs/2018arXiv180106932T">Soft X-ray Imager aboard Hitomi (ASTRO-H)</a></em>, arXiv (2018)</li>
 	  <li>H. Matsumura, T. Tanaka, H. Uchida, H. Okon, T. G. Tsuru <em><a href="http://www.iopscience.iop.org/article/10.3847/1538-4357/aa9bdf/meta">Toward the understanding of the physical origin of recombining plasma in the supernova remnant IC 443</a></em>, ApJ (2017)</li>
           <li>H. Matsumura, H. Uchida, T. Tanaka, T. G. Tsuru, M. Nobukawa, K. K. Nobukawa, M. Itou <em><a href="http://www.adsabs.harvard.edu/abs/2017PASJ...69...30M">Localized recombining plasma in G166.0+4.3: A supernova remnant with an unusual morphology</a></em>, PASJ <strong>69</strong> (2017)</li>
