--- a/thesis.html
+++ b/thesis.html
@@ -420,7 +420,7 @@
 				  <th>2017</th>
 				  <th>尾近 洸行</th>
 				  <th>超新星残骸 W28における過電離プラズマの成因と鉄輝線の検出</th>
-				  <th><a></a></th>
+				  <th><a href="m_ron/okonM.pdf">PDF</a></th>	
 				</tr>
 				
 				<tr>
