--- a/thesis.html
+++ b/thesis.html
@@ -441,8 +441,8 @@
 				  <th>2017</th>
 				  <th>中村 優太</th>
 				  <th>電子飛跡検出型コンプトンカメラにおける充填ガスの改良とガス純化システムの開発</th>
-				  <th><a></a></th>
-				</tr>
+				  <th><a href="m_ron/ynakamuraM.pdf">PDF</a></th>				
+ 				</tr>
 				
 				<tr>
 				  <th>2017</th>
