modify CR member list

--- a/member.html
+++ b/member.html
@@ -117,7 +117,7 @@
 					<td>mizumura*</td>
 					<td>低エネルギーγ線</td>
 				</tr>
-
+<!--
 				<tr>
 					<td>PD</td>
 					<td>小林 翔悟</td>
@@ -147,9 +147,9 @@
 					<td>tetsuro*</td>
 					<td>低エネルギーγ線</td>
 				</tr>	
-
+-->
 				<tr>
-					<td>D3 (学振)</td>
+					<td>OD</td>
 					<td>増田 周</td>
 					<td>Masuda Shu</td>
 					<td>325</td>
@@ -157,7 +157,7 @@
 					<td>masuda*</td>
 					<td>高エネルギーγ線</td>
 				</tr>
-
+<!--
 				<tr>
 					<td>D3 (学振)</td>
 					<td>松村 英晃</td>
@@ -167,9 +167,9 @@
 					<td>matsumura.hideaki.23u***</td>
 					<td>X線</td>
 				</tr>
-
+-->
 				<tr>
-					<td>D2 (学振)</td>
+					<td>D3 (学振)</td>
 					<td>竹村 泰斗</td>
 					<td>Takemura Taito</td>
 					<td>336</td>
@@ -179,7 +179,7 @@
 				</tr>
 
 				<tr>
-					<td>D1</td>
+					<td>D2</td>
 					<td>吉川 慶</td>
 					<td>Yoshikawa Kei</td>
 					<td>325</td>
@@ -189,7 +189,7 @@
 				</tr>
 
 				<tr>
-					<td>M2</td>
+					<td>D1</td>
 					<td>尾近 洸行</td>
 					<td>Okon Hiromichi</td>
 					<td>340</td>
@@ -197,7 +197,7 @@
 					<td>okon*</td>
 					<td>X線</td>
 				</tr>
-
+<!--
 				<tr>
 					<td>M2</td>
 					<td>立花 克裕</td>
@@ -217,9 +217,9 @@
 					<td>taniguchi*</td>
 					<td>低エネルギーγ線</td>
 				</tr>
-
+-->
 				<tr>
-					<td>M2</td>
+					<td>D1 (学振)</td>
 					<td>中村 優太</td>
 					<td>Nakamura Yuta</td>
 					<td>340</td>
@@ -229,7 +229,7 @@
 				</tr>
 
 				<tr>
-					<td>M2</td>
+					<td>D1</td>
 					<td>野崎 誠也</td>
 					<td>Nozaki Seiya</td>
 					<td>327</td>
@@ -237,7 +237,7 @@
 					<td>nozaki*</td>
 					<td>高エネルギーγ線</td>
 				</tr>	
-
+<!--
 				<tr>
 					<td>M2</td>
 					<td>林 秀輝</td>
@@ -247,68 +247,68 @@
 					<td>hayashi*</td>
 					<td>X線</td>
 				</tr>
-
+-->
 				<tr>
-					<td>M1</td>
+					<td>M2</td>
 					<td>井戸垣 洋志</td>
 					<td>Idogaki Hiroshi</td>
 					<td>325</td>
 					<td>075-753-3867</td>
-					<td>idogaki.hiroshi.47m***</td>
+					<td>idogaki.hiroshi.47m**</td>
 					<td>X線</td>
 				</tr>
 
 				<tr>
-					<td>M1</td>
+					<td>M2</td>
 					<td>小野坂 健</td>
 					<td>Onozaka Ken</td>
 					<td>325</td>
 					<td>075-753-3867</td>
-					<td>onozaka.ken.25m***</td>
+					<td>onozaka.ken.25m**</td>
 					<td>低エネルギーγ線</td>
 				</tr>
 
 				<tr>
-					<td>M1</td>
+					<td>M2</td>
 					<td>奥野 智行</td>
 					<td>Okuno Tomoyuki</td>
 					<td>327</td>
 					<td>075-753-3869</td>
-					<td>okuno.tomoyuki.32r***</td>
+					<td>okuno.tomoyuki.32r**</td>
 					<td>X線</td>
 				</tr>
 
 				<tr>
-					<td>M1</td>
+					<td>M2</td>
 					<td>齋藤 要</td>
 					<td>Saito Kaname</td>
 					<td>338</td>
 					<td>075-753-3827</td>
-					<td>saito.kaname.65c***</td>
+					<td>saito.kaname.65c**</td>
 					<td>低エネルギーγ線</td>
 				</tr>
 
 				<tr>
-					<td>M1</td>
+					<td>M2</td>
 					<td>原田 颯大</td>
 					<td>Harada Soudai</td>
 					<td>336</td>
 					<td>075-753-3843</td>
-					<td>harada.soudai.78s***</td>
+					<td>harada.soudai.78s**</td>
 					<td>X線</td>
 				</tr>
 
 				<tr>
-					<td>M1</td>
+					<td>M2</td>
 					<td>平子 丈</td>
 					<td>Hirako Joe</td>
 					<td>327</td>
 					<td>075-753-3869</td>
-					<td>hirako.joe.53c***</td>
+					<td>hirako.joe.53c**</td>
 					<td>高エネルギーγ線</td>
 				</tr>
-
-<!-- 				<tr>
+ 				<tr>
+<!--
 					<td>M1</td>
 					<td>藤井 涼平</td>
 					<td>Fuji Ryohei</td>
@@ -325,8 +325,8 @@
 		  <hr>
 		  <div id="profile-info">
 			<P>(*) あとに @cr.scphys.kyoto-u.ac.jp をつけてください。</P>
-			<P>(**) あとに @kyoto-u.ac.jp をつけてください。</P>
-			<P>(***) あとに @st.kyoto-u.ac.jp をつけてください。</P>
+			<!-- <P>(**) あとに @kyoto-u.ac.jp をつけてください。</P>  -->
+			<P>(**) あとに @st.kyoto-u.ac.jp をつけてください。</P>
 	<p><a href="http://byakko.scphys.kyoto-u.ac.jp:31415/cr_only/member/naisen/">実験室内線番号（内部向け要パスワード）</a><p>
 
 		  </div>
