--- a/ob_member.html
+++ b/ob_member.html
@@ -48,10 +48,90 @@
                   <th width="180"><B><FONT size= "2">現職</FONT> <font size= "1.5">(研究職のみ, 2016年更新)</font></B></th>
                 </tr>
 
- 				<tr>
-					<td>　</td>
-				</tr>
 
+		<tr>
+		  <td>　</td>
+		</tr>
+	
+		<tr>
+		  <td>2017</td>
+		  <td>小林 翔悟</td>
+		  <td>Kobayashi Shogo</td>
+		  <td>X 線</td>
+		  <td>PD</td>
+		  <td>東京理科大学　助教</td>
+		  <th>東京理科大学　助教</th>
+		</tr>		
+
+		<tr>
+		  <td>2017</td>
+		  <td>岸本 哲朗</td>
+		  <td>Kishimoto Tetsuro</td>
+		  <td>γ 線</td>
+		  <td>D3</td>
+		  <td></td>
+		  <th></th>
+		</tr> 	
+		
+		<tr>
+		  <td>2017</td>
+		  <td>古村 翔太郎</td>
+		  <td>Komura Shotaro</td>
+		  <td>γ 線</td>
+		  <td>D3</td>
+		  <td></td>
+		  <th></th>
+		</tr>
+
+		<tr>
+		  <td>2017</td>
+		  <td>松村 英晃</td>
+		  <td>Matsumura Hideaki</td>
+		  <td>X 線</td>
+		  <td>D3 (学振)</td>
+		  <td>東京大学 IPMU PD (学振)</td>
+		  <th>東京大学 IPMU PD (学振)</th>
+		</tr>
+		
+		
+		<tr>
+		  <td>2017</td>
+		  <td>立花 克裕</td>
+		  <td>Tachibana Katsuhiro</td>
+		  <td>X 線</td>
+		  <td>M2</td>
+		  <td></td>
+		  <th></th>
+		</tr> 
+		
+		<tr>
+		  <td>2017</td>
+		  <td>谷口 幹幸</td>
+		  <td>Taniguchi Tomoyuki</td>
+		  <td>γ 線</td>
+		  <td>M2</td>
+		  <td></td>
+		  <th></th>
+		</tr>
+
+		<tr>
+		  <td>2017</td>
+		  <td>林 秀輝</td>
+		  <td>Hayashi Hideki</td>
+		  <td>X 線</td>
+		  <td>M2</td>
+		  <td></td>
+		  <th></th>
+		</tr>
+		
+
+		
+			
+		
+		<tr>
+		  <td>　</td>
+		</tr>
+		
 				<tr>
 					<td>2016</td>
 					<td>伊藤 真音</td>
