--- a/thesis.html
+++ b/thesis.html
@@ -448,7 +448,7 @@
 				  <th>2017</th>
 				  <th>野崎 誠也</th>
 				  <th>次世代ガンマ線天文台CTA大口径望遠鏡用GHz 波形サンプリング回路の性能評価</th>
-				  <th><a></a></th>
+				  <th><a href="m_ron/nozakiM.pdf">PDF</a></th>				
 				</tr>
 				
 				<tr>
