--- a/X/members.html
+++ b/X/members.html
@@ -90,67 +90,22 @@
           <p>075-753-3827</p>
       </div>
       </div>
-    <h3>小林 翔悟（Kobayashi Shogo）</h3>
-    <div class="details_frame"> <img src="image/kobayashi.jpg" alt="真鍋俊也" class="fl">
-      <div class="staffdetails">
-          <h4>学年</h4>
-          <p>PD</p>
-          <h4>居室</h4>
-          <p>340</p>
-          <h4>電話番号</h4>
-          <p>075-753-4241</p>
-        </div>
-        </div>
-    <h3>松村 英晃（Matsumura Hideaki）</h3>
-    <div class="details_frame"> <img src="image/matsumura.jpg" alt="真鍋俊也" class="fl">
-      <div class="staffdetails">
-          <h4>学年</h4>
-          <p>D3 (学振研究員)</p>
-          <h4>居室</h4>
-          <p>327</p>
-          <h4>電話番号</h4>
-          <p>075-753-3869</p>
-        </div>
-        </div>
     <h3>尾近 洸行（Okon Hiromichi）</h3>
     <div class="details_frame"> <img src="image/okon.jpg" alt="真鍋俊也" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
-            <p>M2</p>
+            <p>D1</p>
            <h4>居室</h4>
             <p>340</p>
             <h4>電話番号</h4>
             <p>075-753-4241</p>
         </div>
         </div>
-    <h3>立花 克裕（Tachibana Katsuhiro）</h3>
-    <div class="details_frame"> <img src="image/tachibana.jpg" alt="真鍋俊也" class="fl">
-        <div class="staffdetails">
-            <h4>学年</h4>
-            <p>M2</p>
-            <h4>居室</h4>
-            <p>336</p>
-            <h4>電話番号</h4>
-            <p>075-753-3843</p>
-        </div>
-        </div>
-    <h3>林 秀樹（Hayashi Hideki）</h3>
-    <div class="details_frame"> <img src="image/hayashi.jpg" alt="真鍋俊也" class="fl">
-        <div class="staffdetails">
-            <h4>学年</h4>
-            <p>M2</p>
-          <h4>居室</h4>
-            <p>338</p>
-            <h4>電話番号</h4>
-            <p>075-753-3827</p>
-        </div>
-        </div>
-
     <h3>井戸垣 洋志（Idogaki Hiroshi）</h3>
     <div class="details_frame"> <img src="image/idogaki.jpg" alt="真鍋俊也" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
-            <p>M1</p>
+            <p>M2</p>
           <h4>居室</h4>
             <p>325</p>
             <h4>電話番号</h4>
@@ -162,7 +117,7 @@
     <div class="details_frame"> <img src="image/okuno.jpg" alt="真鍋俊也" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
-            <p>M1</p>
+            <p>M2</p>
           <h4>居室</h4>
             <p>327</p>
             <h4>電話番号</h4>
@@ -173,11 +128,33 @@
     <div class="details_frame"> <img src="image/harada.jpg" alt="真鍋俊也" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
+            <p>M2</p>
+          <h4>居室</h4>
+            <p>336</p>
+            <h4>電話番号</h4>
+            <p>075-753-3843</p>
+        </div>
+        </div>
+    <h3>天野 雄輝 (Amano Yuki)</h3>
+    <div class="details_frame"> <img src="" alt="no image" class="fl">
+        <div class="staffdetails">
+            <h4>学年</h4>
             <p>M1</p>
           <h4>居室</h4>
             <p>336</p>
             <h4>電話番号</h4>
             <p>075-753-3843</p>
+        </div>
+        </div>
+    <h3>佳山 一帆 (Kayama Kazuho)</h3>
+    <div class="details_frame"> <img src="" alt="no image" class="fl">
+        <div class="staffdetails">
+            <h4>学年</h4>
+            <p>M1</p>
+          <h4>居室</h4>
+            <p>338</p>
+            <h4>電話番号</h4>
+            <p>075-753-3827</p>
         </div>
         </div>
 
