modify the main page a bit

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		<li><a href="X" title=""><FONT size="3">XARM衛星搭載X線CCDカメラの開発</FONT></a><br></li>
 		<li><a href="X" title=""><FONT size="3">次世代の広帯域X線精密イメージング</FONT></a><br></li>
 		<li><a href="research/MeV-gamma/wiki/wiki.cgi" title=""><FONT size="3">MeVγ線天文学の開拓を目指す新しいイメージング検出法による気球観測実験SMILE</FONT></a><br></li>
-		<li><a href="research/MeV-gamma/wiki/wiki.cgi" title=""><FONT size="3">新しいMeVγ線技術を用た医学等他分野との共同研究</FONT></a><br></li>
+		<li><a href="http://www-cr.scphys.kyoto-u.ac.jp/research/MeV-gamma/wiki/wiki.cgi?page=for+Medical" title=""><FONT size="3">新しいMeVγ線技術を用た医学等他分野との共同研究</FONT></a><br></li>
 		<li><a href="TeV" title=""><FONT size="3">Fermi衛星やMAGIC望遠鏡によるGeV/TeVγ線観測</FONT></a><br></li>
 		<li><a href="TeV" title=""><FONT size="3">国際協力で推進するTeVγ線望遠鏡CTA</FONT></a><br></li>
 		  
