add topics and papers

--- a/X/index.html
+++ b/X/index.html
@@ -74,7 +74,9 @@
     <div id="pub_frame">
       <h2 class="top">最近の論文</h2>
       <div id="publications">
-        <ul>
+     <ul> 
+<li>Tomoyuki Okuno, Takaaki Tanaka, Hiroyuki Uchida, Hideaki Matsumura, Takeshi Go Tsuru <em><a href="https://arxiv.org/pdf/1805.06690.pdf">Spatially resolved spectroscopy of nonthermal X-rays in RX J1713.7−3946 with Chandra</a></em>, arXiv (2018)</li>
+
 	  <li>Hitomi Collaboration (Corresponding authors: H. Uchida, T. Tanaka et al.) <em><a href="https://arxiv.org/pdf/1802.05068v1.pdf"> Hitomi X-ray Observation of the Pulsar Wind Nebula G21.5−0.9</a></em>, arXiv (2018)</li>
 	  <li>H. Okon, H. Uchida, T. Tanaka, H. Matsumura, T. G. Tsuru <em><a href="https://arxiv.org/pdf/1802.02814.pdf">The Origin of Recombining Plasma and the Detection of the Fe-K Line in the Supernova Remnant W28</a></em>, arXiv (2018)</li>
 	  <li>T. Tanaka, H. Uchida, H. Nakajima, H. Tsunemi, K. Hayashida, T. G. Tsuru, T. Dotani, R. Nagino, S. Inoue, S. Katada, R. Washino, M. Ozaki, H. Tomida, C. Natsukari, S. Ueda, M. Iwai, K. Mori, M. Yamauchi, I. Hatsukade, Y. Nishioka, E. Isoda, M. Nobukawa, J. S. Hiraga, T. Kohmura, H. Murakami, K. Nobukawa, A. Bamba, J. P. Doty <em><a href="http://adsabs.harvard.edu/abs/2018arXiv180106932T">Soft X-ray Imager aboard Hitomi (ASTRO-H)</a></em>, arXiv (2018)</li>
