--- a/X/members.html
+++ b/X/members.html
@@ -136,7 +136,7 @@
         </div>
         </div>
     <h3>天野 雄輝 (Amano Yuki)</h3>
-    <div class="details_frame"> <img src="" alt="no image" class="fl">
+    <div class="details_frame"> <img src="image/2018_Amano.jpg" alt="no image" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
             <p>M1</p>
@@ -147,7 +147,7 @@
         </div>
         </div>
     <h3>佳山 一帆 (Kayama Kazuho)</h3>
-    <div class="details_frame"> <img src="" alt="no image" class="fl">
+    <div class="details_frame"> <img src="image/2018_Kayama.jpg" alt="no image" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
             <p>M1</p>
@@ -164,6 +164,22 @@
       <tr>
         <th class="w150" scope="col">氏名</th>
         <th scope="col">転出先</th>
+      </tr>
+      <tr>
+        <td>&nbsp;小林 翔悟</td>
+        <td>&nbsp東京理科大学 助教</td>
+      </tr>
+      <tr>
+        <td>&nbsp;松村 英晃</td>
+        <td>&nbsp東京大学 IPMU PD (学振)</td>
+      </tr>
+      <tr>
+        <td>&nbsp;立花 克裕</td>
+        <td>&nbspアウトドアスポーツメーカー</td>
+      </tr>
+      <tr>
+        <td>&nbsp;林 秀輝</td>
+        <td>&nbsp総合電機メーカー</td>
       </tr>
       <tr>
         <td>&nbsp;伊藤 真音</td>
