--- a/X/overview.html
+++ b/X/overview.html
@@ -91,7 +91,7 @@
 	</p>
 
 <div align="center">
-<img src="image/fig3.JPG" width="200" align="middle"> <br>開発中の<a href="http://soipix.jp">XRPIX</a>
+<img src="image/fig3.JPG" width="200" align="middle"> <br>開発中のXRPIX</a>
 </div>
 
     <h2 id="4">人工衛星の運用</h2>
