--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
 		    
 		    <dl>
 
+		      <dt>2018.07.20</dt>
+
+		      <dd>IceCube, Fermi-LAT, MAGIC, Kanata, Kiso, Subaru他による、高エネルギーニュートリノ放射源天体同定の成果について、文部科学省にて、記者会見が開かれました。<a href="https://www.youtube.com/watch?v=mkZwPHa0dgg">記者会見の様子(Youtube)</a></dd>
+
 		      <dt>2018.07.13</dt>
 
 		      <dd>IceCube, Fermi-LAT, MAGIC, Kanata, Kiso, Subaru他による、高エネルギーニュートリノ放射源天体同定の成果が「サイエンス」誌に掲載されました。<a href="http://www.chiba-u.ac.jp/general/publicity/press/files/2018/20180713neutrino.pdf">プレスリリース資料</a></dd>
