add topics(Abe-kun oral award), modify member list(Kajiwara-san kyositsu)

--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
 		    
 		    <dl>
 
+		      <dt>2018.07.25</dt>
+		      <dd>M1の阿部光さんが<a href="http://www.astro-wakate.sakura.ne.jp/ss2018/web/">第48回天文・天体物理若手夏の学校</a>にて、オーラルアワード2位を受賞しました。</dd>	
+
 		      <dt>2018.07.20</dt>
 
 		      <dd>IceCube, Fermi-LAT, MAGIC, Kanata, Kiso, Subaru他による、高エネルギーニュートリノ放射源天体同定の成果について、文部科学省にて、記者会見が開かれました。<a href="https://www.youtube.com/watch?v=mkZwPHa0dgg">記者会見の様子(Youtube)</a></dd>
