--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
 		    
 		    <dl>
 
+		      <dt>2018.10.10</dt>
+		      <dd>ガンマ線天文台CTA大口径望遠鏡１号機 完成記念式典が開かれました。<a href="http://www.icrr.u-tokyo.ac.jp/beta/181010.html">プレスリリース</a></dd>
+
 		      <dt>2018.09.25</dt>
 		      <dd><a href="https://soipix.jp/qbi2018.html">第1回量子線イメージング研究会</a>が京都大学で開催されました。</dd>	
 		      
