--- a/X/index.html
+++ b/X/index.html
@@ -74,12 +74,14 @@
     <div id="pub_frame">
       <h2 class="top">最近の論文</h2>
       <div id="publications">
-     <ul> 
-<li>Tomoyuki Okuno, Takaaki Tanaka, Hiroyuki Uchida, Hideaki Matsumura, Takeshi Go Tsuru <em><a href="https://arxiv.org/pdf/1805.06690.pdf">Spatially resolved spectroscopy of nonthermal X-rays in RX J1713.7−3946 with Chandra</a></em>, arXiv (2018)</li>
+     <ul>
+<li>T. Tanaka, et al., <em><a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1810.07036">NuSTAR Detection of Nonthermal Bremsstrahlung from the Supernova Remnant W49B</a></em>, ApJL (2018)</li>
+ 
+<li>Tomoyuki Okuno, Takaaki Tanaka, Hiroyuki Uchida, Hideaki Matsumura, Takeshi Go Tsuru <em><a href="http://ads.nao.ac.jp/abs/2018PASJ...70...77O">Spatially resolved spectroscopy of nonthermal X-rays in RX J1713.7−3946 with Chandra</a></em>, PASJ (2018)</li>
 
-	  <li>Hitomi Collaboration (Corresponding authors: H. Uchida, T. Tanaka et al.) <em><a href="https://arxiv.org/pdf/1802.05068v1.pdf"> Hitomi X-ray Observation of the Pulsar Wind Nebula G21.5−0.9</a></em>, arXiv (2018)</li>
-	  <li>H. Okon, H. Uchida, T. Tanaka, H. Matsumura, T. G. Tsuru <em><a href="https://arxiv.org/pdf/1802.02814.pdf">The Origin of Recombining Plasma and the Detection of the Fe-K Line in the Supernova Remnant W28</a></em>, arXiv (2018)</li>
-	  <li>T. Tanaka, H. Uchida, H. Nakajima, H. Tsunemi, K. Hayashida, T. G. Tsuru, T. Dotani, R. Nagino, S. Inoue, S. Katada, R. Washino, M. Ozaki, H. Tomida, C. Natsukari, S. Ueda, M. Iwai, K. Mori, M. Yamauchi, I. Hatsukade, Y. Nishioka, E. Isoda, M. Nobukawa, J. S. Hiraga, T. Kohmura, H. Murakami, K. Nobukawa, A. Bamba, J. P. Doty <em><a href="http://adsabs.harvard.edu/abs/2018arXiv180106932T">Soft X-ray Imager aboard Hitomi (ASTRO-H)</a></em>, arXiv (2018)</li>
+	  <li>Hitomi Collaboration (Corresponding authors: H. Uchida, T. Tanaka et al.) <em><a href="http://ads.nao.ac.jp/abs/2018PASJ...70...38A"> Hitomi X-ray Observation of the Pulsar Wind Nebula G21.5−0.9</a></em>, PASJ (2018)</li>
+	  <li>H. Okon, H. Uchida, T. Tanaka, H. Matsumura, T. G. Tsuru <em><a href="http://ads.nao.ac.jp/abs/2018PASJ...70...35O">The Origin of Recombining Plasma and the Detection of the Fe-K Line in the Supernova Remnant W28</a></em>, PASJ (2018)</li>
+	  <li>T. Tanaka, H. Uchida, H. Nakajima, H. Tsunemi, K. Hayashida, T. G. Tsuru, T. Dotani, R. Nagino, S. Inoue, S. Katada, R. Washino, M. Ozaki, H. Tomida, C. Natsukari, S. Ueda, M. Iwai, K. Mori, M. Yamauchi, I. Hatsukade, Y. Nishioka, E. Isoda, M. Nobukawa, J. S. Hiraga, T. Kohmura, H. Murakami, K. Nobukawa, A. Bamba, J. P. Doty <em><a href="http://adsabs.harvard.edu/abs/2018arXiv180106932T">Soft X-ray Imager aboard Hitomi (ASTRO-H)</a></em>, Journal of Astronomical Telescopes, Instruments, and Systems (2018)</li>
 	  <li>H. Matsumura, T. Tanaka, H. Uchida, H. Okon, T. G. Tsuru <em><a href="http://www.iopscience.iop.org/article/10.3847/1538-4357/aa9bdf/meta">Toward the understanding of the physical origin of recombining plasma in the supernova remnant IC 443</a></em>, ApJ (2017)</li>
           <li>H. Matsumura, H. Uchida, T. Tanaka, T. G. Tsuru, M. Nobukawa, K. K. Nobukawa, M. Itou <em><a href="http://www.adsabs.harvard.edu/abs/2017PASJ...69...30M">Localized recombining plasma in G166.0+4.3: A supernova remnant with an unusual morphology</a></em>, PASJ <strong>69</strong> (2017)</li>
           <li>H. Matsumura, T. G. Tsuru, T. Tanaka, et al., <em><a href="http://www.sciencedirect.com/science/article/pii/S016890021500618X">Improving charge-collection efficiency of SOI pixel sensors for X-ray astronomy</a></em>, Nuclear Instruments and Methods in Physics Research A <strong>794</strong> (2015)</li>
