add Fujii-san to member list

--- a/member.html
+++ b/member.html
@@ -109,6 +109,16 @@
 				</tr>
 				
 				<tr>
+					<td>特定助教(白眉)</td>
+					<td>藤井 俊博</td>
+					<td>Toshihiro Fujii</td>
+					<td>340</td>
+					<td>075-753-4241</td>
+					<td></td>
+					<td>高エネルギーγ線</td>
+				</tr>
+
+				<tr>
 					<td>PD</td>
 					<td>水村 好貴</td>
 					<td>Mizumura Yoshitaka</td>
@@ -117,6 +127,7 @@
 					<td>mizumura*</td>
 					<td>低エネルギーγ線</td>
 				</tr>
+				
 <!--
 				<tr>
 					<td>PD</td>
