update the member list

--- a/member.html
+++ b/member.html
@@ -119,13 +119,13 @@
 					<td>低エネルギーγ線</td>
 				</tr>
 
-								<tr>
+				<tr>
 					<td>特定助教</td>
 					<td>藤井 俊博</td>
 					<td>Toshihiro Fujii</td>
 					<td>340</td>
 					<td>075-753-4241</td>
-					<td></td>
+					<td>fujii*</td>
 					<td>高エネルギーγ線</td>
 				</tr>
 
