modify the member list

--- a/member.html
+++ b/member.html
@@ -109,15 +109,7 @@
 				</tr>
 				
 
-				<tr>
-					<td>特定助教</td>
-					<td>水村 好貴</td>
-					<td>Mizumura Yoshitaka</td>
-					<td>325</td>
-					<td>075-753-3867</td>
-					<td>mizumura*</td>
-					<td>低エネルギーγ線</td>
-				</tr>
+
 
 				<tr>
 					<td>特定助教</td>
@@ -129,6 +121,16 @@
 					<td>高エネルギーγ線</td>
 				</tr>
 
+
+				<tr>
+					<td>研究員</td>
+					<td>水村 好貴</td>
+					<td>Mizumura Yoshitaka</td>
+					<td>325</td>
+					<td>075-753-3867</td>
+					<td>mizumura*</td>
+					<td>低エネルギーγ線</td>
+				</tr>
 								
 <!--
 				<tr>
