--- a/index.html
+++ b/index.html
@@ -257,9 +257,11 @@
 		    <dl>
 	
 
-		      <dd>T. Tanaka, H. Uchida et al., <a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1810.07036">NuSTAR Detection of Nonthermal Bremsstrahlung from the Supernova Remnant W49B</a>, ApJ Letters(2018)</dd>
+		      <dd>T. Tanaka, H. Uchida et al., <a href="http://ads.nao.ac.jp/abs/2018ApJ...868L..35Y">Evidence for Rapid Adiabatic Cooling as an Origin of the Recombining Plasma in the Supernova Remnant W49B Revealed by NuSTAR Observations</a>, ApJ Letters (2018)</dd>
+
+		      <dd>T. Tanaka, H. Uchida et al., <a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1810.07036">NuSTAR Detection of Nonthermal Bremsstrahlung from the Supernova Remnant W49B</a>, ApJ Letters (2018)</dd>
 		      
-		      <dd> The IceCube Collaboration, Fermi-LAT, MAGIC, Kanata, Kiso, Subaru et al., <a href="http://science.sciencemag.org/content/361/6398/eaat1378">Multimessenger observations of a flaring blazar coincident with high-energy neutrino IceCube-170922A</a>, Science(2018)</dd>
+		      <dd> The IceCube Collaboration, Fermi-LAT, MAGIC, Kanata, Kiso, Subaru et al., <a href="http://science.sciencemag.org/content/361/6398/eaat1378">Multimessenger observations of a flaring blazar coincident with high-energy neutrino IceCube-170922A</a>, Science (2018)</dd>
 		      
 
 		      <dd>T. Okuno, T. Tanaka, H. Uchida, H. Matsumura, T.G. Tsuru, <em><a href="https://arxiv.org/pdf/1805.06690.pdf">Spatially resolved spectroscopy of nonthermal X-rays in RX J1713.7−3946 with Chandra</a></em>, arXiv (2018)</dd>
