--- a/index.html
+++ b/index.html
@@ -258,6 +258,8 @@
 	
 
 
+		      <dd>H. Uchida, T. Tanaka et al., <a href="https://arxiv.org/abs/1812.06616">High Forbidden-to-resonance Line Ratio of OVII Discovered in the Cygnus Loop</a>, ApJ (2018)</dd>
+
 		      <dd>H. Yamaguchi, T. Tanaka, H. Uchida et al., <a href="http://ads.nao.ac.jp/abs/2018ApJ...868L..35Y">Evidence for Rapid Adiabatic Cooling as an Origin of the Recombining Plasma in the Supernova Remnant W49B Revealed by NuSTAR Observations</a>, ApJL (2018)</dd>
 
 		      <dd>T. Tanaka, H. Uchida et al., <a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1810.07036">NuSTAR Detection of Nonthermal Bremsstrahlung from the Supernova Remnant W49B</a>, ApJL (2018)</dd>
