--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
 		    
 		    <dl>
 
+		      <dt>2018.12.14</dt>
+		      <dd>ガンマ線天文台CTA大口径望遠鏡１号機がファーストライトに成功しました。現地試験にはD1の野崎誠也さんも参加しました。 <a href="https://www.cta-observatory.org/lst-prototype-records-its-first-light/">CTA HP</a></dd>
+
 		      <dt>2018.10.10</dt>
 		      <dd>ガンマ線天文台CTA大口径望遠鏡１号機 完成記念式典が開かれました。<a href="http://www.icrr.u-tokyo.ac.jp/beta/181010.html">プレスリリース</a></dd>
 
