modify the ob-member list

--- a/ob_member.html
+++ b/ob_member.html
@@ -69,7 +69,7 @@
 		  <td>Kishimoto Tetsuro</td>
 		  <td>γ 線</td>
 		  <td>D3</td>
-		  <td></td>
+		  <td>製造業開発職</td>
 		  <th></th>
 		</tr> 	
 		
@@ -100,7 +100,7 @@
 		  <td>Tachibana Katsuhiro</td>
 		  <td>X 線</td>
 		  <td>M2</td>
-		  <td></td>
+		  <td>自転車関連企業</td>
 		  <th></th>
 		</tr> 
 		
@@ -110,7 +110,7 @@
 		  <td>Taniguchi Tomoyuki</td>
 		  <td>γ 線</td>
 		  <td>M2</td>
-		  <td></td>
+		  <td>総合電機メーカー</td>
 		  <th></th>
 		</tr>
 
@@ -120,7 +120,7 @@
 		  <td>Hayashi Hideki</td>
 		  <td>X 線</td>
 		  <td>M2</td>
-		  <td></td>
+		  <td>電気機器メーカー</td>
 		  <th></th>
 		</tr>
 		
