add the list of master thesisi

--- a/thesis.html
+++ b/thesis.html
@@ -415,7 +415,42 @@
 					<th width="73%"><B><FONT size= "2">タイトル</FONT></B></th>
 					<th width="20%"><B><FONT size= "2">ダウンロード</FONT></B></th>
 				</tr>
-				
+
+				<tr>
+				  <th>2018</th>
+				  <th>奥野 智行</th>
+				  <th>Chandra衛星による超新星残骸の非熱的X線放射の観測的研究およびX線天文用SOIピクセル検出器のトリガー機能と多層化システムの検証</th>
+				  <th><a></a></th>	
+				</tr>
+
+				<tr>
+				  <th>2018</th>
+				  <th>小野坂 健</th>
+				  <th>MeVガンマ線天体観測実証試験SMILE-2+に向けた気球システムの開発と上空における動作</th>
+				  <th><a></a></th>	
+				</tr>
+
+				<tr>
+				  <th>2018</th>
+				  <th>齋藤 要</th>
+				  <th>次期長期気球実験SMILE-3に向けたMPPCシンチレーションカメラの開発</th>
+				  <th><a></a></th>	
+				</tr>
+
+				<tr>
+				  <th>2018</th>
+				  <th>原田 颯大</th>
+				  <th>固定電位層を導入した次世代X線天文用SOIピクセル検出器の研究</th>
+				  <th><a></a></th>	
+				</tr>
+
+				<tr>
+				  <th>2018</th>
+				  <th>平子 丈</th>
+				  <th>MAGIC望遠鏡による活動銀河核Ton 599からの超高エネルギーガンマ線放射の初検出と多波長解析</th>
+				  <th><a></a></th>	
+				</tr>
+								
 				<tr>
 				  <th>2017</th>
 				  <th>尾近 洸行</th>
