add the web link of FAST in the member list

--- a/member.html
+++ b/member.html
@@ -113,7 +113,7 @@
 
 				<tr>
 					<td>特定助教</td>
-					<td>藤井 俊博</td>
+					<td><A href="https://www.fast-project.org">藤井 俊博</A></td>
 					<td>Toshihiro Fujii</td>
 					<td>340</td>
 					<td>075-753-4241</td>
