add mron(saito,hirako, harada)

--- a/thesis.html
+++ b/thesis.html
@@ -434,21 +434,21 @@
 				  <th>2018</th>
 				  <th>齋藤 要</th>
 				  <th>次期長期気球実験SMILE-3に向けたMPPCシンチレーションカメラの開発</th>
-				  <th><a></a></th>	
+				  <th><a href="m_ron/saitoM.pdf">PDF</a></th>	
 				</tr>
 
 				<tr>
 				  <th>2018</th>
 				  <th>原田 颯大</th>
 				  <th>固定電位層を導入した次世代X線天文用SOIピクセル検出器の研究</th>
-				  <th><a></a></th>	
+				  <th><a href="m_ron/haradaM.pdf">PDF</a></th>	
 				</tr>
 
 				<tr>
 				  <th>2018</th>
 				  <th>平子 丈</th>
 				  <th>MAGIC望遠鏡による活動銀河核Ton 599からの超高エネルギーガンマ線放射の初検出と多波長解析</th>
-				  <th><a></a></th>	
+				  <th><a href="m_ron/hirakoM.pdf">PDF</a></th>	
 				</tr>
 								
 				<tr>
