--- a/ob_member.html
+++ b/ob_member.html
@@ -48,6 +48,56 @@
                   <th width="180"><B><FONT size= "2">現職</FONT> <font size= "1.5">(研究職のみ, 2016年更新)</font></B></th>
                 </tr>
 
+		
+		<tr>
+		  <td>2018</td>
+		  <td>小野坂 健</td>
+		  <td>Ken Onozaka</td>
+		  <td>γ 線</td>
+		  <td>M2</td>
+		  <td>電気機器メーカー</td>
+		  <th></th>
+		</tr>
+		
+		<tr>
+		  <td>2018</td>
+		  <td>奥野 智行</td>
+		  <td>Tomoyuki Okuno</td>
+		  <td>X 線</td>
+		  <td>M2</td>
+		  <td>総合電機メーカー</td>
+		  <th></th>
+		</tr>
+
+		<tr>
+		  <td>2018</td>
+		  <td>齋藤 要</td>
+		  <td>Kaname Saito</td>
+		  <td>γ 線</td>
+		  <td>M2</td>
+		  <td></td>
+		  <th></th>
+		</tr>
+		
+		<tr>
+		  <td>2018</td>
+		  <td>原田 颯大</td>
+		  <td>Sodai Harada</td>
+		  <td>X 線</td>
+		  <td>M2</td>
+		  <td>総合電機メーカー</td>
+		  <th></th>
+		</tr>
+
+		<tr>
+		  <td>2018</td>
+		  <td>平子 丈</td>
+		  <td>Joe Hirako</td>
+		  <td>γ 線</td>
+		  <td>M2</td>
+		  <td>経営コンサルティング企業</td>
+		  <th></th>
+		</tr> 
 
 		<tr>
 		  <td>　</td>
