--- a/thesis.html
+++ b/thesis.html
@@ -420,7 +420,7 @@
 				  <th>2018</th>
 				  <th>奥野 智行</th>
 				  <th>Chandra衛星による超新星残骸の非熱的X線放射の観測的研究およびX線天文用SOIピクセル検出器のトリガー機能と多層化システムの検証</th>
-				  <th><a></a></th>	
+				  <th><a href="m_ron/okunoM.pdf">PDF</a></th>	
 				</tr>
 
 				<tr>
