update member list on April 1st.(I had a mistake...)

--- a/member.html
+++ b/member.html
@@ -166,6 +166,7 @@
 				<tr>
 					<td>D2（学振）</td>
 					<td>中村 優太</td>
+					<td>Nakamura Yuta</td>
 					<td>340</td>
 					<td>075-753-4241</td>
 					<td>ynakamura*</td>
