add FAST experiment in main page

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 		<li><a href="http://www-cr.scphys.kyoto-u.ac.jp/research/MeV-gamma/wiki/wiki.cgi?page=for+Medical" title=""><FONT size="3">新しいMeVγ線技術を用た医学等他分野との共同研究</FONT></a><br></li>
 		<li><a href="TeV" title=""><FONT size="3">Fermi衛星やMAGIC望遠鏡によるGeV/TeVγ線観測</FONT></a><br></li>
 		<li><a href="TeV" title=""><FONT size="3">国際協力で推進するTeVγ線望遠鏡CTA</FONT></a><br></li>
+		<li><a href="https://www.fast-project.org" title=""><FONT size="3">極高エネルギー宇宙線天文学を切り拓く次世代実験FAST</FONT></a><br></li>
 		  
 		</ul>
 		</div>
