--- a/ob_member.html
+++ b/ob_member.html
@@ -51,6 +51,16 @@
 		
 		<tr>
 		  <td>2018</td>
+		  <td>増田 周</td>
+		  <td>Shu Masuda</td>
+		  <td>γ 線</td>
+		  <td>D3</td>
+		  <td>機械メーカー</td>
+		  <th></th>
+		</tr>
+
+		<tr>
+		  <td>2018</td>
 		  <td>小野坂 健</td>
 		  <td>Ken Onozaka</td>
 		  <td>γ 線</td>
