--- a/member.html
+++ b/member.html
@@ -110,7 +110,6 @@
 				
 
 
-
 				<tr>
 					<td>特定助教</td>
 					<td><A href="https://www.fast-project.org">藤井 俊博</A></td>
@@ -123,12 +122,22 @@
 
 
 				<tr>
-					<td>研究員</td>
+					<td>特定研究員</td>
 					<td>水村 好貴</td>
 					<td>Mizumura Yoshitaka</td>
 					<td>325</td>
 					<td>075-753-3867</td>
 					<td>mizumura*</td>
+					<td>低エネルギーγ線</td>
+				</tr>
+
+				<tr>
+					<td>特定研究員</td>
+					<td>園田 真也</td>
+					<td>Sonoda Shinya</td>
+					<td>326</td>
+					<td>075-753-3851</td>
+					<td>sonoda*</td>
 					<td>低エネルギーγ線</td>
 				</tr>
 								
