modify member list(M1)

--- a/member.html
+++ b/member.html
@@ -256,30 +256,30 @@
 			  <td>M1</td>
 			  <td>今川 要</td>
 			  <td>Imagawa Kaname</td>
-			  <td></td> 
-			  <td></td>
+			  <td>325</td> 
+			  <td>075-753-3867</td>
 			  <td>imagawa.kaname.74s**</td>
-			  <td></td>			  
+			  <td>高エネルギーγ線</td>			  
 			</tr>
 
   			<tr>
 			  <td>M1</td>
 			  <td>児玉 涼太</td>
 			  <td>Kodama Ryota</td>
-			  <td></td> 
-			  <td></td>
+			  <td>338</td> 
+			  <td>075-753-3827</td>
 			  <td>kodama.ryota.62u**</td>
 			  <td></td>			  
 			</tr>
 
-			 			<tr>
+			 	<tr>
 			  <td>M1</td>
 			  <td>松田 真宗</td>
 			  <td>Matsuda Masamune</td>
-			  <td></td> 
-			  <td></td>
+			  <td>336</td> 
+			  <td>075-753-3843</td>
 			  <td>matsuda.masamune.38a**</td>
-			  <td></td>			  
+			  <td>X線</td>			  
 			</tr> 
 		
 				
