modify the member list

--- a/member.html
+++ b/member.html
@@ -111,7 +111,7 @@
 
 
 				<tr>
-					<td>特定助教</td>
+					<td>特定助教（白眉）</td>
 					<td><A href="https://www.fast-project.org">藤井 俊博</A></td>
 					<td>Toshihiro Fujii</td>
 					<td>340</td>
