modify the member list

--- a/member.html
+++ b/member.html
@@ -111,7 +111,7 @@
 
 
 				<tr>
-					<td>特定助教（白眉）</td>
+					<td>特定助教^</td>
 					<td><A href="https://www.fast-project.org">藤井 俊博</A></td>
 					<td>Toshihiro Fujii</td>
 					<td>340</td>
@@ -289,7 +289,8 @@
 		  </div>
 		  <hr>
 		  <div id="profile-info">
-			<P>(*) あとに @cr.scphys.kyoto-u.ac.jp をつけてください。</P>
+		    <P> ^ 白眉センター</P>
+		    <P>(*) あとに @cr.scphys.kyoto-u.ac.jp をつけてください。</P>
 			<!-- <P>(**) あとに @kyoto-u.ac.jp をつけてください。</P>  -->
 			<P>(**) あとに @st.kyoto-u.ac.jp をつけてください。</P>
 	<p><a href="http://byakko.scphys.kyoto-u.ac.jp:31415/cr_only/member/naisen/">実験室内線番号（内部向け要パスワード）</a><p>
