--- a/member.html
+++ b/member.html
@@ -23,7 +23,8 @@
 				<h1><B><FONT size= "5" face="Times New Roman">研究室メンバー</FONT></B> </h1>
 				<ul id="gNavi" class="clearfix">
 					<!--<li><B><a href="preparation.html" title="">懲りない面々(写真)</a></B></li>-->
-					<li><B><a href="../life" title="">写真</a></B></li>
+					<!-- <li><B><a href="../life" title="">写真</a></B></li> -->
+					<li><B><a href="album.html" title="">アルバム</a></B></li> 
 					<li><B><a href="obog.html" title="">OB/OG紹介</a></B></li>
 					<li><B><a href="" title="">メンバー紹介</a></B></li>
 					<li class="firstItem"><B><a href=".." title="">ホーム</a></B></li>
