modify album page

--- a/X/index.html
+++ b/X/index.html
@@ -75,7 +75,9 @@
       <h2 class="top">最近の論文</h2>
       <div id="publications">
      <ul>
-<li>T. Tanaka, et al., <em><a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1810.07036">NuSTAR Detection of Nonthermal Bremsstrahlung from the Supernova Remnant W49B</a></em>, ApJL (2018)</li>
+<li>H. Uchida, T. Tanaka et al.,<em><a href="https://arxiv.org/abs/1812.06616">High Forbidden-to-resonance Line Ratio of OVII Discovered in the Cygnus Loop</a></em>, ApJ (2018)</li>
+<li>H. Yamaguchi, T. Tanaka, H. Uchida et al.,<em><a href="http://ads.nao.ac.jp/abs/2018ApJ...868L..35Y">Evidence for Rapid Adiabatic Cooling as an Origin of the Recombining Plasma in the Supernova Remnant W49B Revealed by NuSTAR Observations</a></em>, ApJL (2018)</li>
+<li>T. Tanaka, H. Uchida et al., <em><a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1810.07036">NuSTAR Detection of Nonthermal Bremsstrahlung from the Supernova Remnant W49B</a></em>, ApJL (2018)</li>
  
 <li>Tomoyuki Okuno, Takaaki Tanaka, Hiroyuki Uchida, Hideaki Matsumura, Takeshi Go Tsuru <em><a href="http://ads.nao.ac.jp/abs/2018PASJ...70...77O">Spatially resolved spectroscopy of nonthermal X-rays in RX J1713.7−3946 with Chandra</a></em>, PASJ (2018)</li>
 
