--- a/album.html
+++ b/album.html
@@ -38,7 +38,8 @@
 
 	<h2><font size=5> 2019年度 </font></h2>
 	<div class="fig_box">
-	  <img src="test1.jpg" alt="お花見@鴨川" />
+	  <!--<img src="test1.jpg" alt="お花見@鴨川" /> -->
+	  <img src="https://lh3.googleusercontent.com/lyc76aCmZnhBwBxAVgy_AxjIb8Jor067Pi4DUzvF1-zMvm3O0oX6h0Yo6YLAiXrUEH1wJFxowFH-6JtNiUVxcPtC9P_kCqB0AmPTa8ij4WW-h9kUTZSazdbGrR8O1j7ruK0_pRUo=w2400" alt="お花見@鴨川" /> 
 	  <h3>2019年4月13日</h3>
 	  <h3>お花見@鴨川</h3>
 	</div>
@@ -46,17 +47,42 @@
 	<h2><font size=5> 2018年度 </font></h2>
 
 	<div class="fig_box">
-	  <img src="test1.jpg" alt="お花見@鴨川" />
+	  <img src="https://lh3.googleusercontent.com/DsBv4sMOXz8qpy90N8Mc0CB7qEluRdhcdYxEuTC3sqt8NDfSOowXsZXZJ57z8aGXPjy50Fv2qWvp11o2Ek1ODx9R9m42OFm17U2RP7yckmwTpxe_BYDWBuUxDLh5krisQDXwmmUt=w2400" alt="お花見@鴨川" />
 	  <h3>2018年4月22日</h3>
 	  <h3>お花見@鴨川</h3>
 	</div>
 
 	<div class="fig_box">
-	  <img src="test1.jpg" alt="学位授与式" />
+	  <img src="https://lh3.googleusercontent.com/OHoagoVgVHA_g_FDgYLHuEWf7yEU4Tm_mhkPKuGi9h0AJs334Po60S_yCGSYyiE08QrIwPnpUiC7XoZpXI1vL7kFXFZaiUvY2wUcowL2vvCqRTHNtEIR4lycf30aasdtH1v-O2ib=w2400" alt="学位授与式" />
 	  <h3>2019年3月25日</h3>
 	  <h3>学位授与式</h3>
 	</div>
 
+	<h2><font size=5> 2017年度 </font><h2>
+
+
+	<div class="fig_box">
+	  <img src="https://lh3.googleusercontent.com/fGeSznCf9FT8UlOAwfev6v5kdDC85zeve2GccLmxHuB8LJh66NWy5Z3lAsASGh0sOH2HQAz55hqpB2Ab8S7Ln7PIbwPT5Lx6Qqdvj4C-Ep1AR7wTH38Nud79Hy8zxaYu0iZxK57W=w2400" alt="学位授与式" />
+	  <h3>2018年3月26日</h3>
+	  <h3>学位授与式</h3>
+	</div>
+
+	<div class="fig_box">
+	  <img src="https://lh3.googleusercontent.com/3dapyV7g2t1Vrf7i29PKETT6GZuUWAymV0jC8XT6oJV41vKqivHAYTAPzGygnaHdMfzh8ozqXHNk2zSwFfN4inVqSck02XDh0qtYpgAY5ajTAxnF6WDi_GOyYHuqlZD9zuB9Wiq1=w2400" alt="高田(麻)送別会" />
+	  <h3>2018年2月16日</h3>
+	  <h3>高田(麻)送別会</h3>
+	</div>
+
+
+	<div class="fig_box">
+	  <img src="https://lh3.googleusercontent.com/Ady6YoZBj-NVUzFphIWY2iNp2J9G6FpiTDVNVBaiGkrw4cyTGnjuBQNf3WJQ0HCVwklhWGuXaOTe6XEqHLwQeKuSiZhhSHxmMSV2RMszTZ2LPD4AMQsjquK1x8lZjM0Pm7ttkCZq=w2400" alt="お花見" />
+	  <h3>2017年4月21日</h3>
+	  <h3>お花見@鴨川</h3>
+	</div>
+
+
+	<h2><font size=4>その他</font></h2>
+	<p>旧ページは <a href="../life"> こちら</a>  </p>
       </div> <!-- main contents -->
     </div> <!-- wrapper -->
   </body>
