--- a/X/members.html
+++ b/X/members.html
@@ -94,7 +94,7 @@
     <div class="details_frame"> <img src="image/okon.jpg" alt="真鍋俊也" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
-            <p>D1</p>
+            <p>D2</p>
            <h4>居室</h4>
             <p>340</p>
             <h4>電話番号</h4>
@@ -112,34 +112,11 @@
             <p>075-753-3867</p>
         </div>
         </div>
-
-    <h3>奥野 智行（Okuno Tomoyuki）</h3>
-    <div class="details_frame"> <img src="image/okuno.jpg" alt="真鍋俊也" class="fl">
-        <div class="staffdetails">
-            <h4>学年</h4>
-            <p>M2</p>
-          <h4>居室</h4>
-            <p>327</p>
-            <h4>電話番号</h4>
-            <p>075-753-3869</p>
-        </div>
-        </div>
-    <h3>原田 颯大（Harada Sodai）</h3>
-    <div class="details_frame"> <img src="image/harada.jpg" alt="真鍋俊也" class="fl">
-        <div class="staffdetails">
-            <h4>学年</h4>
-            <p>M2</p>
-          <h4>居室</h4>
-            <p>336</p>
-            <h4>電話番号</h4>
-            <p>075-753-3843</p>
-        </div>
-        </div>
     <h3>天野 雄輝 (Amano Yuki)</h3>
     <div class="details_frame"> <img src="image/2018_Amano.jpg" alt="no image" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
-            <p>M1</p>
+            <p>M2</p>
           <h4>居室</h4>
             <p>336</p>
             <h4>電話番号</h4>
@@ -150,6 +127,17 @@
     <div class="details_frame"> <img src="image/2018_Kayama.jpg" alt="no image" class="fl">
         <div class="staffdetails">
             <h4>学年</h4>
+            <p>M2</p>
+          <h4>居室</h4>
+            <p>338</p>
+            <h4>電話番号</h4>
+            <p>075-753-3827</p>
+        </div>
+        </div>
+    <h3>児玉 涼太 (Kodama Ryota)</h3>
+    <div class="details_frame"> <img src="image/2019_Kodama.jpg" alt="no image" class="fl">
+        <div class="staffdetails">
+            <h4>学年</h4>
             <p>M1</p>
           <h4>居室</h4>
             <p>338</p>
@@ -157,13 +145,31 @@
             <p>075-753-3827</p>
         </div>
         </div>
-
+    <h3>松田 真宗 (Matsuda Masamune)</h3>
+    <div class="details_frame"> <img src="image/2019_Matsuda.jpg" alt="no image" class="fl">
+        <div class="staffdetails">
+            <h4>学年</h4>
+            <p>M1</p>
+          <h4>居室</h4>
+            <p>336</p>
+            <h4>電話番号</h4>
+            <p>075-753-3843</p>
+        </div>
+        </div>
 
     <h2 id=3>過去のメンバー</h2>
     <table class="color">
       <tr>
         <th class="w150" scope="col">氏名</th>
         <th scope="col">転出先</th>
+      </tr>
+      <tr>
+        <td>&nbsp;奥野 智行</td>
+        <td>&nbsp総合電機メーカー</td>
+      </tr>
+      <tr>
+        <td>&nbsp;原田 颯大</td>
+        <td>&nbsp総合電機メーカー</td>
       </tr>
       <tr>
         <td>&nbsp;小林 翔悟</td>
