--- a/index_test.html
+++ b/index_test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+q<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -99,7 +99,7 @@
 	      <h4>チェレンコフ望遠鏡実験</h4>
 	      <div class="fig_box">
 		<img src="index/img/topics_tev.jpg"/>
-		<a href="thesis.html">
+		<a href="TeV">
 		  <div class="mask">
 		    <div class="caption"> 現行のMAGIC望遠鏡を用いて高エネルギー宇宙現象を観測する傍ら、次世代チェレンコフ望遠鏡CTAの焦点面カメラ（読み出し回路）の開発・観測データの解析を行っています。</div>
 		  </div>
