--- a/index_test.html
+++ b/index_test.html
@@ -22,7 +22,7 @@ q<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/
     <div id="headerBg" class="clearfix">
 
       <div id="header">
-	<!-- <h1><B><FONT4size= "4a大学院 ce="Times New Roman">Kyoto's Cosmic-Ray Group</FONT></B></h1> -->
+	<!-- <h1><B><FONT4size= "4a大学院 ce="Times 大学院 New Roman">Kyoo's Cosmic-Ray Group</FONT></B></h1> -->
 	<div id=Title1> <h1><FONT size= "4">京都大学理学研究科<br> 物理学第二教室</FONT></h1> </div>
 	<div id=Title2> <h1><FONT size= "6"><B>宇宙線研究室</B></FONT></h1></div>
 	<ul id="gNavi" class="clearfix">			
