--- a/index_test.html
+++ b/index_test.html
@@ -1,4 +1,4 @@
-q<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -11,7 +11,8 @@ q<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/
 <meta http-equiv="imagetoolbar" content="no" />
 <link href="share/css/set/import.css" rel="stylesheet" type="text/css" media="all" />
 <link href="share/css/share_test.css" rel="stylesheet" type="text/css" media="all" />
-<link href="index/css/index.css" rel="stylesheet" type="text/css" media="all" />
+<link href="index/css/index.css?20190507" rel="stylesheet" type="text/css" media="all" />
+<!-- query(no-cache) -->
 <link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
 <link href="favicon.ico" rel="icon" type="image/vnd.microsoft.icon" />
 <script type="text/javascript" src="share/js/default.js"></script>
