add new topics in main page(20190508)

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
 		    
 		    <dl>
 
+		      <dt>2019.04.22</dt>
+		      <dd>2018年度卒の原田颯大さんが <a href="https://www.cta-observatory.org/lst-prototype-records-its-first-light/">第九回KEK測定器開発優秀修士論文賞</a></dd>を受賞しました。
+
 		      <dt>2018.12.14</dt>
 		      <dd>ガンマ線天文台CTA大口径望遠鏡１号機がファーストライトに成功しました。現地試験にはD1の野崎誠也さんも参加しました。 <a href="https://www.cta-observatory.org/lst-prototype-records-its-first-light/">CTA HP</a></dd>
 
