--- a/index_test.html
+++ b/index_test.html
@@ -97,7 +97,7 @@
 	    <div class="ProjectNewBox">
 	      <div id="ProjectTeV"> <h3>高エネルギーγ線グループ</h3> </div>
 	      
-	      <a href="TeV"><h4>チェレンコフ望遠鏡実験</h4></a>
+	      <a href="TeV"><h4>チェレンコフ望遠鏡による宇宙観測</h4></a>
 	      <div class="fig_box">
 		<img src="index/img/topics_tev.jpg"/>
 		<a href="TeV">
