update news and album(20190927)

--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
 		       
 		       <dl>
 			 <dt>2019.04.22</dt>
+			 <dd>物理学会にて、2018年度卒の原田颯大さんが <a href="http://rd.kek.jp/ronbun/award2019.html">第九回KEK測定器開発優秀修士論文賞</a>の受賞式、招待記念講演に参加されました。</dd>
+
+			 <dt>2019.04.22</dt>
 			 <dd>2018年度卒の原田颯大さんが <a href="http://rd.kek.jp/award.html">第九回KEK測定器開発優秀修士論文賞</a>を受賞しました。</dd>
 		      
 			 <dt>2018.12.14</dt>
