update album page(20190927)

--- a/album.html
+++ b/album.html
@@ -59,7 +59,8 @@
 
 	<div class="fig_box">
 	  <!--<img src="test1.jpg" alt="お花見@鴨川" /> -->
-	  <img src="https://lh3.googleusercontent.com/lyc76aCmZnhBwBxAVgy_AxjIb8Jor067Pi4DUzvF1-zMvm3O0oX6h0Yo6YLAiXrUEH1wJFxowFH-6JtNiUVxcPtC9P_kCqB0AmPTa8ij4WW-h9kUTZSazdbGrR8O1j7ruK0_pRUo=w2400" alt="お花見@鴨川" /> 
+	  <a href="https://photos.app.goo.gl/4N7s9shuJ3pm1FD46">
+	  <img src="https://lh3.googleusercontent.com/lyc76aCmZnhBwBxAVgy_AxjIb8Jor067Pi4DUzvF1-zMvm3O0oX6h0Yo6YLAiXrUEH1wJFxowFH-6JtNiUVxcPtC9P_kCqB0AmPTa8ij4WW-h9kUTZSazdbGrR8O1j7ruK0_pRUo=w2400" alt="お花見@鴨川" /> </a>
 	  <h3>2019年4月13日</h3>
 	  <h3>お花見@鴨川</h3>
 	</div>
