--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 		       <strong><FONT size="4">新着情報</FONT></strong>
 		       
 		       <dl>
-			 <dt>2019.04.22</dt>
+			 <dt>2019.09.19</dt>
 			 <dd>物理学会にて、2018年度卒の原田颯大さんが <a href="http://rd.kek.jp/ronbun/award2019.html">第九回KEK測定器開発優秀修士論文賞</a>の受賞式、招待記念講演に参加されました。</dd>
 
 			 <dt>2019.04.22</dt>
@@ -298,6 +298,8 @@
 
 		    <dl>
 	
+		      <dd>K. Kayama, T. Tsuru, T. Tanaka, H. Uchida, S. Harada, T. Okuno, Y. Amano et al., <a href="https://iopscience.iop.org/article/10.1088/1748-0221/14/06/C06005">Subpixel response of SOI pixel sensor for X-ray astronomy with pinned depleted diode: first result from mesh experiment</a>, JINST (2019)</dd>
+
 		      <dd>K. Mori, T. Tsuru, T. Tanaka et al., <a href="http://adsabs.harvard.edu/abs/2019NIMPA.924..473M">Total ionizing dose effects on the SOI pixel sensor for X-ray astronomical use</a>, NIM A (2019)</dd>
 
                       <dd>S. Harada, T. Tsuru, T. Tanaka et al., <a href="http://adsabs.harvard.edu/abs/2019NIMPA.924..468H">Performance of the Silicon-On-Insulator pixel sensor for X-ray astronomy, XRPIX6E, equipped with pinned depleted diode structure </a>, NIM A (2019)</dd>
