update album page again(20190927)

--- a/album.html
+++ b/album.html
@@ -39,19 +39,22 @@
 	<h2><font size=5> 2019年度 </font></h2>
 
 	<div class="fig_box">
-	  <img src="https://lh3.googleusercontent.com/_hZJmdZ20teafYV4IRtr7Do2AmuK37K2vTh8Wwxgp2y3glp7FrnPenxN52IMsqLzrXXgoVeBg9j9EDTl523PF4WvWb4ZcMRLQV2ltmoOwv6oiwm8taWhrdKsjeDgpv7x8NR00fVXeA=w2400" alt="第３回増田会" /> 
+	  <a href="https://photos.app.goo.gl/PmLwPz1PRrbbD1RF8">
+	  <img src="https://lh3.googleusercontent.com/_hZJmdZ20teafYV4IRtr7Do2AmuK37K2vTh8Wwxgp2y3glp7FrnPenxN52IMsqLzrXXgoVeBg9j9EDTl523PF4WvWb4ZcMRLQV2ltmoOwv6oiwm8taWhrdKsjeDgpv7x8NR00fVXeA=w2400" alt="第３回増田会" /> </a> 
 	  <h3>2019年9月28日</h3>
 	  <h3>第３回増田会</h3>
 	</div>
 	
 	<div class="fig_box">
-	  <img src="https://lh3.googleusercontent.com/N1ZuyWhB28cN6uesEL8t33e4IR4xasYwJ1ytCJ1-B15-cY4iVZulNseEGB1H18oXrqQj0K7mMIEKly4Y4q5Cz7lns6lRKzG89_CZ4Mw44etBEpKhac3QRN64UFxtM6mu3-BZS7BYMA=w2400" alt="第２回増田会" /> 
+	  <a href="https://photos.app.goo.gl/UzfZTEzus21iyMK38">
+	  <img src="https://lh3.googleusercontent.com/N1ZuyWhB28cN6uesEL8t33e4IR4xasYwJ1ytCJ1-B15-cY4iVZulNseEGB1H18oXrqQj0K7mMIEKly4Y4q5Cz7lns6lRKzG89_CZ4Mw44etBEpKhac3QRN64UFxtM6mu3-BZS7BYMA=w2400" alt="第２回増田会" /> </a>
 	  <h3>2019年7月20日</h3>
 	  <h3>第２回増田会</h3>
 	</div>
 
 	<div class="fig_box">
-	  <img src="https://lh3.googleusercontent.com/X3BiWo2iB7Vxdpphf7VVgYH0rjYesHQBv9DZdTX_jzR7es7ni3YzDGh3p2-kFEQHF1drq9s9S896u2WPoUrB8RR2CJ1n57Fpwv9-lBEcZH9HiyQ3NR3y8ZWl7CeCgyio1cz3uxxNhA=w2400" alt="CR山登り@比叡山" /> 
+	  <a href ="https://photos.app.goo.gl/phdmSztab2KzHN3u8">
+	  <img src="https://lh3.googleusercontent.com/X3BiWo2iB7Vxdpphf7VVgYH0rjYesHQBv9DZdTX_jzR7es7ni3YzDGh3p2-kFEQHF1drq9s9S896u2WPoUrB8RR2CJ1n57Fpwv9-lBEcZH9HiyQ3NR3y8ZWl7CeCgyio1cz3uxxNhA=w2400" alt="CR山登り@比叡山" /></a> 
 	  <h3>2019年6月18日</h3>
 	  <h3>CR山登り@比叡山</h3>
 	</div>
