update member page(20190927)

--- a/member.html
+++ b/member.html
@@ -287,6 +287,8 @@
 				
 			  </tbody>
 			</table>
+
+			<img src="https://lh3.googleusercontent.com/lyc76aCmZnhBwBxAVgy_AxjIb8Jor067Pi4DUzvF1-zMvm3O0oX6h0Yo6YLAiXrUEH1wJFxowFH-6JtNiUVxcPtC9P_kCqB0AmPTa8ij4WW-h9kUTZSazdbGrR8O1j7ruK0_pRUo=w2400"  /> </a>
 		  </div>
 		  <hr>
 		  <div id="profile-info">
