--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
 		       <strong><FONT size="4">新着情報</FONT></strong>
 		       
 		       <dl>
+			 <dt>2019.10.25</dt>
+			 <dd>物理学会(2019年秋季大会)にて、D2の吉川慶さんが <a href="https://www.jps.or.jp/activities/awards/gakusei/2019_student_presentation_award.php#cr">日本物理学会学生優秀発表賞(宇宙線・宇宙物理領域)</a>を受賞されました。 <a href="http://www-cr.scphys.kyoto-u.ac.jp/research/MeV-gamma/Slide/yosikawa/Slide_201909_JPS.pdf">発表資料</a></dd>
+
 			 <dt>2019.09.19</dt>
 			 <dd>物理学会にて、2018年度卒の原田颯大さんが <a href="http://rd.kek.jp/ronbun/award2019.html">第九回KEK測定器開発優秀修士論文賞</a>の受賞式、招待記念講演に参加されました。</dd>
 
