--- a/album.html
+++ b/album.html
@@ -39,6 +39,13 @@
 	<h2><font size=5> 2019年度 </font></h2>
 
 	<div class="fig_box">
+	  <a href="https://photos.app.goo.gl/XtdN4SdZ5FFoofu37">
+	  <img src="https://lh3.googleusercontent.com/K3VJ8plMWLJAXIvTNfK-8llEUEWpX323JHFojfh52Rnk3nOVUMPf0BMduYA6ZqiezXKveOczwmnnfEd3XeNdUTnu1b6ErF2pCzPhS_hyiDOGTmWcloX2QL6pvfR5eV5iNaCOZ5k9BQ=w2400" alt="水村さん送別お茶会" /> </a> 
+	  <h3>2019年11月22日</h3>
+	  <h3></h3>
+	</div>
+
+	<div class="fig_box">
 	  <a href="https://photos.app.goo.gl/PmLwPz1PRrbbD1RF8">
 	  <img src="https://lh3.googleusercontent.com/_hZJmdZ20teafYV4IRtr7Do2AmuK37K2vTh8Wwxgp2y3glp7FrnPenxN52IMsqLzrXXgoVeBg9j9EDTl523PF4WvWb4ZcMRLQV2ltmoOwv6oiwm8taWhrdKsjeDgpv7x8NR00fVXeA=w2400" alt="第３回増田会" /> </a> 
 	  <h3>2019年9月28日</h3>
