--- a/album.html
+++ b/album.html
@@ -42,7 +42,7 @@
 	  <a href="https://photos.app.goo.gl/XtdN4SdZ5FFoofu37">
 	  <img src="https://lh3.googleusercontent.com/K3VJ8plMWLJAXIvTNfK-8llEUEWpX323JHFojfh52Rnk3nOVUMPf0BMduYA6ZqiezXKveOczwmnnfEd3XeNdUTnu1b6ErF2pCzPhS_hyiDOGTmWcloX2QL6pvfR5eV5iNaCOZ5k9BQ=w2400" alt="水村さん送別お茶会" /> </a> 
 	  <h3>2019年11月22日</h3>
-	  <h3></h3>
+	  <h3>水村さん送別お茶会</h3>
 	</div>
 
 	<div class="fig_box">
